--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@storybook/builder-vite": "^0.2.5",
     "@storybook/html": "^6.5.13",
     "@storybook/testing-library": "^0.0.13",
+    "@types/react": "^18.0.25",
     "@typescript-eslint/eslint-plugin": "^5.42.1",
     "@typescript-eslint/parser": "^5.42.1",
     "babel-loader": "^9.1.0",
@@ -36,6 +37,7 @@
     "prettier": "^2.7.1",
     "typescript": "^4.8.4",
     "vite": "^3.2.3",
+    "vite-plugin-checker": "^0.5.1",
     "vite-plugin-solid": "^2.4.0"
   },
   "dependencies": {
