--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite-template-solid",
+  "name": "solid-ts-template",
   "version": "0.0.0",
   "description": "",
   "type": "module",
