add airbnb styleguide and simple import sort

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,21 +4,28 @@
     "es2021": true
   },
   "extends": [
-    "eslint:recommended",
+    "airbnb-base",
+    "airbnb-typescript/base",
     "plugin:solid/typescript",
-    "plugin:@typescript-eslint/recommended",
     "prettier"
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
+    "project": "./tsconfig.json",
     "ecmaFeatures": {
       "jsx": true
     },
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
-  "plugins": ["solid", "@typescript-eslint", "prettier"],
+  "plugins": ["solid", "@typescript-eslint", "simple-import-sort", "prettier"],
   "rules": {
+    "simple-import-sort/imports": "error",
+    "simple-import-sort/exports": "error",
+    "import/first": "error",
+    "import/newline-after-import": "error",
+    "import/no-duplicates": "error",
+    "import/order": "off",
     "camelcase": "error",
     "spaced-comment": ["error", "always", { "markers": ["/"] }],
     "no-duplicate-imports": "error"
