--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@typescript-eslint/parser": "^5.47.0",
     "babel-loader": "^9.1.0",
     "eslint": "^8.30.0",
+    "eslint-config-airbnb-base": "15.0.0",
+    "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-typescript": "^3.5.2",
     "eslint-plugin-import": "^2.26.0",
@@ -49,6 +51,7 @@
     "vitest": "^0.26.2"
   },
   "dependencies": {
+    "eslint-plugin-simple-import-sort": "^8.0.0",
     "solid-js": "^1.6.6",
     "solid-styled-components": "^0.28.5"
   }
