--- a/package.json
+++ b/package.json
@@ -11,20 +11,20 @@
     "lint": "eslint src/**/*.{js,jsx,ts,tsx,json}",
     "lint:fix": "eslint --fix 'src/**/*.{js,jsx,ts,tsx,json}'",
     "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build",
     "test": "vitest"
   },
   "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.20.5",
-    "@storybook/addon-actions": "^6.5.15",
-    "@storybook/addon-essentials": "^6.5.15",
-    "@storybook/addon-interactions": "^6.5.15",
-    "@storybook/addon-links": "^6.5.15",
-    "@storybook/builder-vite": "^0.2.6",
-    "@storybook/html": "^6.5.15",
-    "@storybook/testing-library": "^0.0.13",
+    "@storybook/addon-actions": "^7.0.8",
+    "@storybook/addon-essentials": "^7.0.8",
+    "@storybook/addon-interactions": "^7.0.8",
+    "@storybook/addon-links": "^7.0.8",
+    "@storybook/html": "^7.0.8",
+    "@storybook/html-vite": "^7.0.8",
+    "@storybook/testing-library": "^0.1.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@types/react": "^18.0.26",
     "@types/testing-library__jest-dom": "^5.14.5",
@@ -38,11 +38,14 @@
     "eslint-import-resolver-typescript": "^3.5.2",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-solid": "^0.9.1",
-    "eslint-plugin-storybook": "^0.6.8",
+    "eslint-plugin-storybook": "^0.6.12",
     "happy-dom": "^8.1.1",
     "jsdom": "^20.0.3",
     "prettier": "^2.8.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "solid-testing-library": "^0.5.0",
+    "storybook": "^7.0.8",
     "typescript": "^4.9.4",
     "vite": "^4.0.3",
     "vite-plugin-checker": "^0.5.2",
